<resources>
    <string name="app_name">LocationKit App</string>
    <string name="title_activity_maps">LocationKit</string>
    <string name="str_settings">Settings</string>
    <string name="str_getplace">Get Current Place</string>
    <string name="email_visit_history">Email Visit History</string>
    <string name="clear_visit_history">Clear Visit History</string>
    <string name="disable_tracking">Disable Tracking</string>
    <string name="disable_notifications">Disable Notifications</string>
    <string name="enable_tracking">Enable Tracking</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="computing">We are currently computing your coordinates and will have your first location in just a few minutes…</string>
    <string name="how_does_this_work">How does LocationKit work?</string>
    <string name="export_db">Export Database</string>
</resources>
