<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_getplace" android:title="@string/str_getplace"
        android:icon="@drawable/ic_nav_pin"
        android:orderInCategory="100"

        app:showAsAction="always"/>

    <item android:id="@+id/action_settings" android:title="@string/str_settings"
        android:icon="@drawable/ic_gear"
        android:orderInCategory="101" app:showAsAction="always">
        <menu>

            <item android:id="@+id/action_email" android:title="@string/email_visit_history"/>
            <item android:id="@+id/action_clear" android:title="@string/clear_visit_history"/>
            <item android:id="@+id/action_enable_disable_tracking" android:title="@string/disable_tracking"/>
            <item android:id="@+id/action_enable_disable_notifications" android:title="@string/disable_notifications"/>
            <item android:id="@+id/action_show_info" android:title="@string/how_does_this_work"/>
        </menu>
        </item>
</menu>